// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`an if() entry toJSON with condition 1`] = `
{
  "condition": <sass($foo)>,
  "inputs": [
    {
      "css": "@#{if(sass($foo): bar)}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "raws": {},
  "sassType": "if-entry",
  "value": <bar>,
}
`;

exports[`an if() entry toJSON with else 1`] = `
{
  "condition": "else",
  "inputs": [
    {
      "css": "@#{if(else: foo)}",
      "hasBOM": false,
      "id": "<input css _____>",
    },
  ],
  "raws": {},
  "sassType": "if-entry",
  "value": <foo>,
}
`;
